--- a/app/component/mainBaner.css
+++ b/app/component/mainBaner.css
@@ -1,8 +1,8 @@
-body {
+.banner {
   background: linear-gradient(-45deg, #71ee52, #101670, #f51ef5, #23d5ab);
   background-size: 400% 400%;
   animation: gradient 10s ease infinite;
-  height: 100vh;
+  height: 50vh;
 }
 
 @keyframes gradient {
