--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -30,4 +31,9 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+* {
+  scroll-behavior: smooth;
+  scrollbar-width: thin !important;
 }
