--- a/app/components/mainBaner.css
+++ b/app/components/mainBaner.css
@@ -1,5 +1,5 @@
 .banner {
-  background: linear-gradient(-45deg, #71ee52, #101670, #f51ef5, #23d5ab);
+  background: linear-gradient(-45deg,#10922c, #101670,  #d90de0);
   background-size: 400% 400%;
   animation: gradient 10s ease infinite;
   
