--- a/app/components/header.css
+++ b/app/components/header.css
@@ -6,9 +6,30 @@ input::placeholder {
 }
 
 .hide{
-  display: none !important
+  display: none;
+  z-index: 100;
+  padding-top: 15px;
+}
+.hide:hover{
+  display: flex;
 }
 .show:hover + .hide {
-  display: block !important
   
+  animation-name: my-animation;
+  animation-duration: 0.5s;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+  display: flex;
+  
+}
+
+@keyframes my-animation {
+  from {
+    opacity: 0;
+    top: 100px;
+  }
+  to {
+    opacity: 1;
+    
+  }
 }
